--- a/Styles.css
+++ b/Styles.css
@@ -255,34 +255,110 @@ header {
 }
 
 /* Donate Section */
-.donate {
-    background: #2c3e50;
+.donate-container {
+    background: #3e5771ff;
     color: #fff;
-    padding: 5rem 2rem;
     text-align: center;
 }
 
-.donate-content {
-    max-width: 600px;
+.m-pesa-form {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    width: 400px;
+    max-width: 400px;
     margin: 0 auto;
+    gap: 10px;
+    padding: 5px 10px;
+    border: 1px solid #926868ff;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.donate-content p {
-    margin-bottom: 2rem;
+.m-pesa-form label {
+    text-align: left;
+    font: 20px/1.5 Arial, sans-serif;
+    color: #000;
 }
 
-#donation-form input {
-    padding: 0.8rem;
-    width: 100%;
-    margin-bottom: 1rem;
-    border: none;
+.m-pesa-form input {
+    border: 0.5px solid #ccc;
     border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
 }
 
+.m-pesa-form button {
+    background: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px;
+    font-size: 16px;
+    transition: background 0.3s ease;
+}
+
+.m-pesa-form button:hover {
+    background: #0056b3;
+    color: #fff;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.hidden {
+    display: none;
+}
+
+.loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    border: 3px solid #926868ff;
+    border-top-color: #007bff;
+    border-radius: 50%;
+    /* animation: spin 1s linear infinite; */
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(168, 158, 158, 0.5);
+    z-index: 9999;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+}
+/* Chess Board Section */
+.board {
+    width: 400px;
+    height: 400px;
+    margin: 2rem auto;
+    background: #eee;
+    display: grid;
+    grid-template-columns: repeat
+}
 /* Chess Puzzle Section */
 .puzzle {
     padding: 5rem 2rem;
     text-align: center;
+}
+li {
+    list-style: none;
+    margin-bottom: 1rem;
 }
 
 .chessboard {
@@ -617,4 +693,19 @@ footer {
 
 #account-login-form .back-btn:hover {
     background-color: rgba(209, 20, 17, 0.96);
+}
+
+.back-to-home {
+    background-color: #2c3e50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    width: 20%;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.back-to-home:hover {
+    background-color: #1a202c;
 }
